syntax = "proto3";
package ibc.lightclients.corda.v1;

option go_package = "github.com/hyperledger-labs/yui-corda-ibc/go/x/ibc/light-clients/xx-corda/types";
option java_outer_classname = "HostProto";

import "ibc/lightclients/corda/v1/corda-types.proto";

service HostService {
  // transactions
  rpc CreateHost (CreateHostRequest) returns (CreateHostResponse);

  // queries
  rpc QueryHost (QueryHostRequest) returns (QueryHostResponse);
}

message Host {
  repeated Party participants = 1;
  StateRef base_id = 2;
  Party notary = 3;
  uint64 next_client_sequence = 4;
  uint64 next_connection_sequence = 5;
  uint64 next_channel_sequence = 6;
  map<string, string> module_names = 7;
  repeated string bank_ids = 8;
}

message CreateHostRequest {
  StateRef base_id = 1;
  map<string, string> module_names = 2;
}

message CreateHostResponse {
  bytes proof = 1;
}

message QueryHostRequest {
  StateRef base_id = 1;
}

message QueryHostResponse {
  Host host = 1;
}
